--- a/source/Todo.Data.Tests/Todo.Data.Tests.csproj
+++ b/source/Todo.Data.Tests/Todo.Data.Tests.csproj
@@ -42,6 +42,7 @@
     </Reference>
     <Reference Include="nunit.framework, Version=3.7.1.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
       <HintPath>..\packages\NUnit.3.7.1\lib\net45\nunit.framework.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
@@ -52,8 +53,9 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
-    <Reference Include="TddBuddy.SpeedySqlLocalDb, Version=1.1.3.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\TddBuddy.SpeedySqlLocalDb.1.1.3\lib\net45\TddBuddy.SpeedySqlLocalDb.dll</HintPath>
+    <Reference Include="TddBuddy.SpeedySqlLocalDb, Version=1.1.4.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\TddBuddy.SpeedySqlLocalDb.1.1.4\lib\net45\TddBuddy.SpeedySqlLocalDb.dll</HintPath>
+      <Private>True</Private>
     </Reference>
   </ItemGroup>
   <ItemGroup>
